# seis-eikonal

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  compile.sh
cmake/: SelectImplementation.cmake  SetStdC99.cmake
include/: openst.h
include/openst/common/: arrayops.h  buildinfo.h  common.h  coordsys.h  dynarr.h  error.h  float.h  grad.h  hacks.h  interop.h  interp.h  macros.h  memadr.h  version.h
include/openst/eikonal/: eikonal.h  fsm.h  lsm.h
include/openst/raytrace/: backtrace.h  raytrace.h
scripts/: compile_all_imps.sh  omp_env.sh
src/: fsm.h  main.c
src/fsm/: fsm_openmp_v1.c  fsm_openmp_v2.c  fsm_openmp_v3.c  fsm_openmp_v4.c  fsm_openmp_v5.c  fsm_serial_v1.c
src/fsm_stable/: fsm_support.c
src/openst/common/: arrayops.c  buildinfo.c  coordsys.c  dynarr.c  float.c  grad.c  interop.c  interp.c  version.c
src/openst/eikonal/fsm/: fsm3d_common.c  fsm3d_init.c  fsm3d_nodeupdate.c
src/openst/eikonal/fsm/fsm3d_blockserial/: fsm3d_blockserial_v1.c  fsm3d_blockserial_v2.c
src/openst/eikonal/fsm/fsm3d_computepartial/: fsm3d_bfsm_openmp_v1.c  fsm3d_bfsm_openmp_v2.c  fsm3d_bfsm_openmp_v3.c  fsm3d_dfsm_openmp_v1.c  fsm3d_dfsm_serial_v1.c  fsm3d_fsm_serial_v1.c
src/openst/eikonal/fsm/fsm3d_imp/: fsm3d_bfsm_openmp_v1.c  fsm3d_bfsm_openmp_v2.c  fsm3d_bfsm_openmp_v3.c  fsm3d_dfsm_openmp_v1.c  fsm3d_dfsm_serial_v1.c  fsm3d_fsm_serial_v1.c
src/openst/eikonal/lsm/: lsm3d_common.c  lsm3d_init.c  lsm3d_nodeupdate.c  lsm3d_support.c
src/openst/eikonal/lsm/lsm3d_blockserial/: lsm3d_blockserial_v1.c  lsm3d_blockserial_v2.c
src/openst/eikonal/lsm/lsm3d_computepartial/: lsm3d_blsm_openmp_v1.c  lsm3d_blsm_openmp_v2.c  lsm3d_blsm_openmp_v3.c  lsm3d_dlsm_openmp_v1.c  lsm3d_dlsm_serial_v1.c  lsm3d_lsm_serial_v1.c
src/openst/eikonal/lsm/lsm3d_imp/: lsm3d_blsm_openmp_v1.c  lsm3d_blsm_openmp_v2.c  lsm3d_blsm_openmp_v3.c  lsm3d_dlsm_openmp_v1.c  lsm3d_dlsm_serial_v1.c  lsm3d_lsm_serial_v1.c
src/openst/raytrace/: backtrace.c
test/: CMakeLists.txt  compile_all_imps.sh
test/BRT3D_EX1/: CMakeLists.txt
test/BRT3D_EX1/src/: main.c
test/EIKONAL_EX1/: CMakeLists.txt  compile.sh  omp_env.sh  res_merge.sh  submit_script.sh  test.sh  test_block.sh  test_openmp.sh  test_serial.sh
test/EIKONAL_EX1/src/: main.c
test/EIKONAL_HDF5/: CMakeLists.txt  compile.sh  fio_hdf5.c  fio_hdf5.h  main.c
test/EIKONAL_HDF5/src/: fio_hdf5.c  fio_hdf5.h  main.c
test/INTERP/: CMakeLists.txt
test/INTERP/src/: main.c
test/INTERP2D/: CMakeLists.txt
test/INTERP2D/src/: main.c
wrappers/fortran/: BRT3D_EX1.f90  EIKONAL_EX1.f90  OpenST.f90  clean.sh  compile.sh  fort.f95  module.f90  module.f95
wrappers/matlab/: OpenST_BRT3D.m  OpenST_BRT3D_mex.c  OpenST_LSM3D.m  OpenST_LSM3D_TEST.m  OpenST_LSM3D_TEST_2.m  OpenST_LSM3D_mex.c  OpenST_MEX.c  OpenST_MEX.h  OpenST_MEX_Compile.m  OpenST_MEX_SetNumThreads.m
