set(EIKONAL_EX1_SRC src/main.c)
add_executable(EIKONAL_EX1 ${EIKONAL_EX1_SRC})
if(WIN32)
    target_link_libraries(EIKONAL_EX1 OPENST_SHARED)
    target_compile_definitions(EIKONAL_EX1 PRIVATE -DOPENST_LINK_SHARED)
else()
    target_link_libraries(EIKONAL_EX1 OPENST_STATIC)
endif()

if(DEFINED TEST_FSM)
    message(STATUS "EIKONAL_EX1 is using FSM")
    target_compile_definitions(EIKONAL_EX1 PRIVATE -DTEST_FSM)
endif()

# target_compile_definitions(EIKONAL_EX1 PRIVATE -DTEST_FSM)
add_test(NAME EIKONAL_EX1 COMMAND $<TARGET_FILE:EIKONAL_EX1>)
